Wed Jun 28 17:58:50 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Make testsuite's memory checking threadsafe.

Wed Jun 28 16:24:49 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix deadlock in da_database.cc.

Wed Jun 28 15:23:07 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixed configure so that --enable-debug=full actually _does_ select
	  verbose output.

Wed Jun 28 12:24:18 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* API addition - Add a OmEnquire::get_query() method, to retrieve the
	  query which was set.

Wed Jun 28 09:13:26 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add an OmLock, and sentries to the public methods in DADatabase.

	* Add "threadtest", a testsuite for checking thread safety.
          Currently has no (completed) tests.

	* Compile various things only if network databases are compiled in.
	  (currently doesn't work correctly).

Wed Jun 28 03:58:42 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Don't compile network stuff if it's configured off.

Tue Jun 27 17:37:16 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added ability to get writable databases from database manager.

Tue Jun 27 11:19:01 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added test for requiring -nsl (eg, on solaris).
          Only add network libraries if compiling in network code.
	  Change configure options for specifying debugging levels.

Tue Jun 27 10:09:13 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Changed "test -e" to "test -f" in Makefiles - test -e is not
	  portable.

Mon Jun 26 15:04:37 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added a swedish stemming algorithm.

Mon Jun 26 14:12:19 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change debug class so that it has an operator<<, rather than
	  exposing a stream.  This is somewhat more portable.
