@@ -1,3 +1,7 @@
+Wed Jun 28 20:14:54 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Make threadtest use a dlist file.
+
 Wed Jun 28 17:58:50 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Make testsuite's memory checking threadsafe.
